--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <img src="../assets/logo.png">
+  <img width="400"
+       src="./assets/logo.png">
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
