Added HomeModule and Project counter

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,7 +1,6 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <img width="400"
-       src="./assets/logo.png">
-</div>
+<header class="sticky">
+  <a routerLink="/"
+     class="logo"><span class="icon-home"></span></a>
+  <a href="#"
+     class="button">Home</a>
+</header>
