Add Project CRUD

--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="sticky">
-  <p>&copy; {{ currentDate | date: 'yyyy' }}</p>
+  <p class="">&copy; {{ currentDate | date: 'yyyy' }}</p>
 </footer>
