--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="sticky">
   <a routerLink="/"
      class="logo"><span class="icon-home"></span></a>
-  <a href="#"
+  <a routerLink="/"
      class="button">Home</a>
+  <a routerLink="projects"
+     class="button">Projects</a>
 </header>
