Add back to list button

--- a/src/app/projects/view-project/view-project.component.html
+++ b/src/app/projects/view-project/view-project.component.html
@@ -4,3 +4,8 @@
     <h5>{{ project.name }}</h5>
   </div>
 </div>
+<hr>
+<div>
+  <button routerLink="/projects"
+          class="primary">Back to list</button>
+</div>
