--- a/src/app/projects/projects/projects.component.html
+++ b/src/app/projects/projects/projects.component.html
@@ -6,4 +6,4 @@
           class="primary">New Project</button>
 </div>
 <hr>
-<app-projects-list [projects]="projects"></app-projects-list>
+<app-projects-list [projects]="projects | async"></app-projects-list>
