--- a/src/app/projects/projects/view-project/viewer-project-form/viewer-project-form.component.html
+++ b/src/app/projects/projects/view-project/viewer-project-form/viewer-project-form.component.html
@@ -3,6 +3,6 @@
 <div class="card">
   <div class="section">
     <h5>Project Name</h5>
-    <p>{{project.name}}</p>
+    <p>{{project?.name}}</p>
   </div>
 </div>
