--- a/src/app/projects/projects/projects-list/projects-list.component.html
+++ b/src/app/projects/projects/projects-list/projects-list.component.html
@@ -1,7 +1,7 @@
-<div class="row" *ngIf="projects.length > 0; else noProjects;">
+<div class="row" *ngIf="projects?.length > 0; else noProjects;">
   <div *ngFor="let item of projects"
        class="card">
-    <h5><a routerLink="view/{{item.id}}"> {{ item.name }}</a></h5>
+    <h5><a routerLink="view/{{item._id}}"> {{ item.name }}</a></h5>
   </div>
 </div>
 <ng-template #noProjects>
