--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-2">&copy; {{ currentDate | date: 'yyyy' }}</div>
-      <div class="col-sm-10"><span class="toast">{{ lastMessage$ | async }}</span></div>
+      <div class="col-sm-10"><span class="toast" *ngIf="lastMessage$ | async">{{ lastMessage$ | async }}</span></div>
     </div>
   </div>
-
-
 </footer>
